refactor: Use sorted sets everywhere to keep orders of identifiables in the catalog close to users expectations. (#733)
Closes #731.